fixed orden de noticias

--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -537,6 +537,27 @@
                                 <a mdbWavesEffect class="cardIcon" href="mailto:spetrozzino@itba.edu.ar"><i class="fas fa-envelope"></i></a>
                             </mdb-card-body>
                         </mdb-card>
+
+                                                
+                        <mdb-card>
+                            <div class="view view-cascade overlay waves-light" mdbWavesEffect>
+                                <mdb-card-img src="https://i.ibb.co/JmVtNQ8/sofia-cerritini.jpg" alt="Foto de Sofia Cerretini"></mdb-card-img>
+                                <a><div class="mask rgba-white-slight"></div></a>
+                            </div>
+
+                            <mdb-card-body cascade="true" class="text-center pb-0 px-0">
+                                <h4 class="card-title"><strong>Sofia Cerretini</strong></h4>
+                                <h5>{{ 'HOME.CARGO.WIE.PLANIFICACION' | translate }}</h5>
+
+                                <!-- Linkedin -->
+                                <a mdbWavesEffect class="cardIcon" href="http://linkedin.com/in/sofia-cerretini-2452691a5"><i class="fab fa-linkedin"></i></a>
+                                <!-- Mail -->
+                                <a mdbWavesEffect class="cardIcon" href="mailto:scerretini@itba.edu.ar"><i class="fas fa-envelope"></i></a>
+                            </mdb-card-body>
+                        </mdb-card>
+                        
+
+                        
                     </div>
                     <div class="card-group">
                         <mdb-card>
@@ -555,23 +576,41 @@
                                 <a mdbWavesEffect class="cardIcon" href="mailto:abruno@itba.edu.ar"><i class="fas fa-envelope"></i></a>
                             </mdb-card-body>
                         </mdb-card>
-
+                        
                         <mdb-card>
                             <div class="view view-cascade overlay waves-light" mdbWavesEffect>
-                                <mdb-card-img src="https://i.ibb.co/JmVtNQ8/sofia-cerritini.jpg" alt="Foto de Sofia Cerretini"></mdb-card-img>
+                                <mdb-card-img src="https://i.ibb.co/JkCmGXZ/patriciowhittingslow.jpg" alt="Foto de Patricio Whittingslow"></mdb-card-img>
                                 <a><div class="mask rgba-white-slight"></div></a>
                             </div>
 
                             <mdb-card-body cascade="true" class="text-center pb-0 px-0">
-                                <h4 class="card-title"><strong>Sofia Cerretini</strong></h4>
-                                <h5>{{ 'HOME.CARGO.WIE.PLANIFICACION' | translate }}</h5>
+                                <h4 class="card-title"><strong>Patricio Whittingslow</strong></h4>
+                                <h5>{{ 'HOME.CARGO.WIE.VOLUNTARIO' | translate }}</h5>
 
                                 <!-- Linkedin -->
-                                <a mdbWavesEffect class="cardIcon" href="http://linkedin.com/in/sofia-cerretini-2452691a5"><i class="fab fa-linkedin"></i></a>
+                                <a mdbWavesEffect class="cardIcon" href="https://www.linkedin.com/in/patricio-whittingslow-3b9564140/"><i class="fab fa-linkedin"></i></a>
                                 <!-- Mail -->
-                                <a mdbWavesEffect class="cardIcon" href="mailto:scerretini@itba.edu.ar"><i class="fas fa-envelope"></i></a>
+                                <a mdbWavesEffect class="cardIcon" href="mailto:pwhittingslow@itba.edu.ar"><i class="fas fa-envelope"></i></a>
                             </mdb-card-body>
                         </mdb-card>
+
+                        <mdb-card>
+                            <div class="view view-cascade overlay waves-light" mdbWavesEffect>
+                                <mdb-card-img src="https://i.ibb.co/YX5j6nw/arielnowik.jpg" alt="Foto de Ariel Nowik"></mdb-card-img>
+                                <a><div class="mask rgba-white-slight"></div></a>
+                            </div>
+
+                            <mdb-card-body cascade="true" class="text-center pb-0 px-0">
+                                <h4 class="card-title"><strong>Ariel Nowik</strong></h4>
+                                <h5>{{ 'HOME.CARGO.WIE.VOLUNTARIO' | translate }}</h5>
+
+                                <!-- Linkedin -->
+                                <a mdbWavesEffect class="cardIcon" href="https://www.linkedin.com/in/ariel-nowik-13608a158/"><i class="fab fa-linkedin"></i></a>
+                                <!-- Mail -->
+                                <a mdbWavesEffect class="cardIcon" href="mailto:anowik@itba.edu.ar"><i class="fas fa-envelope"></i></a>
+                            </mdb-card-body>
+                        </mdb-card>
+
                         
                         <mdb-card>
                             <div class="view view-cascade overlay waves-light" mdbWavesEffect>
@@ -621,14 +660,33 @@
                 <div class="bottomLine">
                     <div class="card-group">
                         <mdb-card>
+
                             <div class="view view-cascade overlay waves-light" mdbWavesEffect>
-                                <mdb-card-img src="https://i.ibb.co/tZ0ZyY3/gonzalohirsch.jpg" alt="Foto de Carola Pedrosa"></mdb-card-img>
+                                <mdb-card-img src="https://i.ibb.co/s2TtgHv/fbt.jpg" alt="Foto de Ignacio Villanueva"></mdb-card-img>
+                                <a><div class="mask rgba-white-slight"></div></a>
+                            </div>
+
+                            <mdb-card-body cascade="true" class="text-center pb-0 px-0">
+                                <h4 class="card-title"><strong>Ignacio Villanueva</strong></h4>
+                                <h5>{{ 'HOME.CARGO.CS.PRESIDENTE' | translate }}</h5>
+
+                                <!-- Linkedin -->
+                                <a mdbWavesEffect class="cardIcon" href="https://www.linkedin.com/in/ignacio-villanueva-256541176/"><i class="fab fa-linkedin"></i></a>
+                                <!-- Mail -->
+                                <a mdbWavesEffect class="cardIcon" href="mailto:ivillanueva@itba.edu.ar"><i class="fas fa-envelope"></i></a>
+                            </mdb-card-body>
+                        </mdb-card>
+
+                        <mdb-card>
+
+                            <div class="view view-cascade overlay waves-light" mdbWavesEffect>
+                                <mdb-card-img src="https://i.ibb.co/tZ0ZyY3/gonzalohirsch.jpg" alt="Foto de Gonzalo Hirsch"></mdb-card-img>
                                 <a><div class="mask rgba-white-slight"></div></a>
                             </div>
 
                             <mdb-card-body cascade="true" class="text-center pb-0 px-0">
                                 <h4 class="card-title"><strong>Gonzalo Hirsch</strong></h4>
-                                <h5>{{ 'HOME.CARGO.CS.PRESIDENTE' | translate }}</h5>
+                                <h5>{{ 'HOME.CARGO.CS.VICEPRESIDENTE' | translate }}</h5>
 
                                 <!-- Linkedin -->
                                 <a mdbWavesEffect class="cardIcon" href="https://ar.linkedin.com/in/gonzalo-hirsch-5b4854155"><i class="fab fa-linkedin"></i></a>
@@ -671,11 +729,41 @@
                             </mdb-card-body>
                         </mdb-card>
 
+                        <mdb-card>
+                            <div class="view view-cascade overlay waves-light" mdbWavesEffect>
+                                <mdb-card-img src="https://i.ibb.co/Fwd34CH/MariaLuz.jpg" alt="Foto de Patricio Whittingslow"></mdb-card-img>
+                                <a><div class="mask rgba-white-slight"></div></a>
+                            </div>
 
+                            <mdb-card-body cascade="true" class="text-center pb-0 px-0">
+                                <h4 class="card-title"><strong>Malu Stewart Harris</strong></h4>
+                                <h5>{{ 'HOME.CARGO.CS.COMPETITIVEPROGRAMMING' | translate }}</h5>
 
+                                <!-- Linkedin -->
+                                <!--<a mdbWavesEffect class="cardIcon" href="https://www.linkedin.com/in/patricio-whittingslow-3b9564140/"><i class="fab fa-linkedin"></i></a>-->
+                                <!-- Mail -->
+                                <a mdbWavesEffect class="cardIcon" href="mailto:mastewart@itba.edu.ar"><i class="fas fa-envelope"></i></a>
+                            </mdb-card-body>
+                        </mdb-card>
                     </div>
                     <div class="card-group">
-                        
+                        <mdb-card>
+                            <div class="view view-cascade overlay waves-light" mdbWavesEffect>
+                                <mdb-card-img src="https://i.ibb.co/dL2XYfF/Juli-Vuoso.jpg" alt="Foto de Catalena Lucena Maguire"></mdb-card-img>
+                                <a><div class="mask rgba-white-slight"></div></a>
+                            </div>
+
+                            <mdb-card-body cascade="true" class="text-center pb-0 px-0">
+                                <h4 class="card-title"><strong>Julián Matías Vuoso</strong></h4>
+                                <h5>{{ 'HOME.CARGO.CS.PUBLICRELATIONS' | translate }}</h5>
+
+                                <!-- Linkedin -->
+                                <a mdbWavesEffect class="cardIcon" href="https://www.linkedin.com/in/julian-vuoso-425788192/"><i class="fab fa-linkedin"></i></a>
+                                <!-- Mail -->
+                                <a mdbWavesEffect class="cardIcon" href="mailto:juvuoso@itba.edu.ar"><i class="fas fa-envelope"></i></a>
+                            </mdb-card-body>
+                        </mdb-card>
+
                         <mdb-card>
                             <div class="view view-cascade overlay waves-light" mdbWavesEffect>
                                 <mdb-card-img src="https://i.ibb.co/7JRcVw0/grigio.jpg" alt="Foto de Juan Gabriel Griggio"></mdb-card-img>
@@ -692,10 +780,10 @@
                                 <a mdbWavesEffect class="cardIcon" href="mailto:jgriggio@itba.edu.ar"><i class="fas fa-envelope"></i></a>
                             </mdb-card-body>
                         </mdb-card>
-                        
+
                         <mdb-card>
                             <div class="view view-cascade overlay waves-light" mdbWavesEffect>
-                                <mdb-card-img src="https://i.ibb.co/gv8Wmcb/alvaro-mendez.jpg" alt="Foto de Ignacio Alberto Méndez"></mdb-card-img>
+                                <mdb-card-img src="https://i.ibb.co/G998BW4/alvaro-mendez.jpg" alt="Foto de Ignacio Alberto Méndez"></mdb-card-img>
                                 <a><div class="mask rgba-white-slight"></div></a>
                             </div>
 
@@ -709,6 +797,24 @@
                                 <a mdbWavesEffect class="cardIcon" href="mailto:ignmendez@itba.edu.ar"><i class="fas fa-envelope"></i></a>
                             </mdb-card-body>
                         </mdb-card>
+
+                        <mdb-card>
+                            <div class="view view-cascade overlay waves-light" mdbWavesEffect>
+                                <mdb-card-img src="https://i.ibb.co/rx5NyP1/Juli-Tallar.jpg" alt="Foto de Julián Tallar"></mdb-card-img>
+                                <a><div class="mask rgba-white-slight"></div></a>
+                            </div>
+
+                            <mdb-card-body cascade="true" class="text-center pb-0 px-0">
+                                <h4 class="card-title"><strong>Julián Tallar</strong></h4>
+                                <h5>{{ 'HOME.CARGO.CS.LOGISTIC' | translate }}</h5>
+
+                                <!-- Linkedin -->
+                                <a mdbWavesEffect class="cardIcon" href="https://www.linkedin.com/in/juli%C3%A1n-tallar/"><i class="fab fa-linkedin"></i></a>
+                                <!-- Mail -->
+                                <a mdbWavesEffect class="cardIcon" href="mailto:jtallar@itba.edu.ar"><i class="fas fa-envelope"></i></a>
+                            </mdb-card-body>
+                        </mdb-card>
+
                         <mdb-card>
                             <div class="view view-cascade overlay waves-light" mdbWavesEffect>
                                 <mdb-card-img src="https://i.ibb.co/vcfqtQf/flor-petrovich.jpg" alt="Foto de Florencia Petrikovich"></mdb-card-img>
