--- a/src/app/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage.component.html
@@ -100,7 +100,7 @@
 
         <mdb-card-text>{{ 'HOME.IEEEXTREME.TEXT' | translate }}</mdb-card-text>
   
-        <a class="link-text" href="ieeextreme">
+        <a class="link-text" [routerLink]="['/ieeextreme']">
           <h5 class="waves-light" mdbWavesEffect>{{ 'HOME.SEEMORE' | translate }}
             <mdb-icon fas icon="chevron-right" class="waves-light" mdbWavesEffect></mdb-icon>
           </h5>
@@ -126,7 +126,7 @@
 
         <mdb-card-text>{{ 'HOME.CLASSES.TEXT' | translate }}</mdb-card-text>
   
-        <a class="link-text" href="cursospython">
+        <a class="link-text" [routerLink]="['/cursospython']">
           <h5 class="waves-light" mdbWavesEffect>{{ 'HOME.SEEMORE' | translate }}
             <mdb-icon fas icon="chevron-right" class="waves-light" mdbWavesEffect></mdb-icon>
           </h5>
