--- a/src/app/newnavbar/newnavbar.component.html
+++ b/src/app/newnavbar/newnavbar.component.html
@@ -48,6 +48,11 @@
           en
         </a>
       </li>
+      <li class="nav-item">
+        <a [routerLink]="['/login']" class="nav-link">
+          <i class="fas fa-sign-in-alt"></i>
+        </a>
+      </li>
     </ul>
 
   </links>
