migrated all cards to new system

--- a/src/app/team-card/team-card.component.html
+++ b/src/app/team-card/team-card.component.html
@@ -1,7 +1,7 @@
 <div class="bottomLine">
     <div class="card-group">
 
-        <mdb-card *ngFor="let person of peopleCD">
+        <mdb-card *ngFor="let person of people">
 
             <mdb-card-img [src]="person.photo" alt="Foto de {{person.name}}"></mdb-card-img>
             <a><div class="mask rgba-white-slight"></div></a>
@@ -19,5 +19,4 @@
         </mdb-card>
 
     </div>
-
 </div>
