--- a/src/app/team-card/team-card.component.html
+++ b/src/app/team-card/team-card.component.html
@@ -7,7 +7,7 @@
             <a><div class="mask rgba-white-slight"></div></a>
         
             <mdb-card-body cascade="true" class="text-center pb-0 px-0">
-                <h4 class="card-title"><strong>{{person.name}}</strong></h4>
+                <h4><strong>{{person.name}}</strong></h4>
                 <h5>{{ person.cargo | translate }}</h5>
         
                 <!-- Linkedin -->
