more wie and linguistic fixes

--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -77,6 +77,8 @@
                 </mat-expansion-panel-header>
 
                 <app-team-card type="WIE"></app-team-card>
+                <app-team-card type="WIE2"></app-team-card>
+                <app-team-card type="WIE3"></app-team-card>
 
             </mat-expansion-panel>
 
