--- a/src/app/ieeextreme/ieeextreme.component.html
+++ b/src/app/ieeextreme/ieeextreme.component.html
@@ -7,7 +7,7 @@
     <title>IEEExtreme</title>
 </head>
 <header>
-    <app-newnavbar-ieextreme></app-newnavbar-ieextreme>
+    <app-navbar-ieeextreme></app-navbar-ieeextreme>
 </header>
 
 <body>
