--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -86,7 +86,7 @@
             <mat-expansion-panel class="mat-elevation-z0">
                 <mat-expansion-panel-header>
                     <mat-panel-title id="colorCS">
-                        {{ 'HOME.CARGO.EDUCATION.TITLE' | translate }}
+                        Computer Society
                     </mat-panel-title>
                 </mat-expansion-panel-header>
 
