added not listed feature

--- a/src/app/editar-anuncio/editar-anuncio.component.html
+++ b/src/app/editar-anuncio/editar-anuncio.component.html
@@ -12,6 +12,12 @@
     <input class="long-input" type="text" id="imageText" name="imageText"><br><br>
     <label for="lname">Breve introducción</label>
     <input class="long-input" type="text" id="shortIntro" name="imageText"><br><br>
+
+    <div class="custom-control custom-checkbox">
+        <input type="checkbox" class="custom-control-input" id="listed">
+        <label class="custom-control-label" for="listed">Listed</label>
+    </div><br><br>
+
     <label for="lname">Contenido</label>
     <textarea class="long-input" id="content" name="content" cols="50" rows="10"></textarea>
     
