--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -629,6 +629,10 @@
                             </mdb-card-body>
                         </mdb-card>
 
+                        
+                    </div>
+
+                    <div class="card-group">
                         <mdb-card>
                             <div class="view view-cascade overlay waves-light" mdbWavesEffect>
                                 <mdb-card-img src="https://i.ibb.co/K9SbCTJ/carolapedrosa.jpg" alt="Foto de Carola Pedrosa"></mdb-card-img>
@@ -645,8 +649,58 @@
                                 <a mdbWavesEffect class="cardIcon" href="mailto:cpedrosa@itba.edu.ar"><i class="fas fa-envelope"></i></a>
                             </mdb-card-body>
                         </mdb-card>
-                    </div>
 
+                        <mdb-card>
+                            <div class="view view-cascade overlay waves-light" mdbWavesEffect>
+                                <mdb-card-img src="https://i.ibb.co/MgBJDmG/paula-oseroff.png" alt="Foto de Carola Pedrosa"></mdb-card-img>
+                                <a><div class="mask rgba-white-slight"></div></a>
+                            </div>
+
+                            <mdb-card-body cascade="true" class="text-center pb-0 px-0">
+                                <h4 class="card-title"><strong>Paula Oseroff</strong></h4>
+                                <h5>{{ 'HOME.CARGO.WIE.WEBMASTER' | translate }}</h5>
+
+                                <!-- Linkedin -->
+                                <a mdbWavesEffect class="cardIcon" href="http://linkedin.com/in/paula-oseroff-44a0a2189"><i class="fab fa-linkedin"></i></a>
+                                <!-- Mail -->
+                                <a mdbWavesEffect class="cardIcon" href="mailto:poseroff@itba.edu.ar"><i class="fas fa-envelope"></i></a>
+                            </mdb-card-body>
+                        </mdb-card>
+
+                        <mdb-card>
+                            <div class="view view-cascade overlay waves-light" mdbWavesEffect>
+                                <mdb-card-img src="https://i.ibb.co/JyghYss/Luc-a-Malfetana.jpg" alt="Foto de Carola Pedrosa"></mdb-card-img>
+                                <a><div class="mask rgba-white-slight"></div></a>
+                            </div>
+
+                            <mdb-card-body cascade="true" class="text-center pb-0 px-0">
+                                <h4 class="card-title"><strong>Lucía Malfetana</strong></h4>
+                                <h5>{{ 'HOME.CARGO.WIE.REDES' | translate }}</h5>
+
+                                <!-- Linkedin -->
+                                <a mdbWavesEffect class="cardIcon" href="http://linkedin.com/in/lucía-m-61801a1a8"><i class="fab fa-linkedin"></i></a>
+                                <!-- Mail -->
+                                <a mdbWavesEffect class="cardIcon" href="mailto:lmalfetana@itba.edu.ar"><i class="fas fa-envelope"></i></a>
+                            </mdb-card-body>
+                        </mdb-card>
+
+                        <mdb-card>
+                            <div class="view view-cascade overlay waves-light" mdbWavesEffect>
+                                <mdb-card-img src="https://i.ibb.co/jgKsQ0Q/Tamara-Raquel-Canillas.jpg" alt="Foto de Carola Pedrosa"></mdb-card-img>
+                                <a><div class="mask rgba-white-slight"></div></a>
+                            </div>
+
+                            <mdb-card-body cascade="true" class="text-center pb-0 px-0">
+                                <h4 class="card-title"><strong>Tamara Raquel Canillas</strong></h4>
+                                <h5>{{ 'HOME.CARGO.WIE.VOLUNTARIA' | translate }}</h5>
+
+                                <!-- Linkedin -->
+                                <a mdbWavesEffect class="cardIcon" href="https://www.linkedin.com/in/tamaracanillas"><i class="fab fa-linkedin"></i></a>
+                                <!-- Mail -->
+                                <a mdbWavesEffect class="cardIcon" href="mailto:tcanillas@itba.edu.ar"><i class="fas fa-envelope"></i></a>
+                            </mdb-card-body>
+                        </mdb-card>
+                    </div>
                 </div>
                 
             </mat-expansion-panel>
