--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -37,7 +37,7 @@
             <br>
             <div id="flex">
                 <button type="submit" style="float: left;">Sign Up</button>
-                <h3 id="passerr">Passwords dont match</h3>
+                <h3 id="passerr">{{text}}</h3>
             </div>
         </form>
         <br><br><br><br>
