change password and more validation

--- a/src/app/auth/register/register.component.css
+++ b/src/app/auth/register/register.component.css
@@ -4,6 +4,7 @@ html {
 }
 
 body {
+    font-size: 3vmin;
     padding: 10%;
     background: rgb(10,27,103);
     background: linear-gradient(75deg, rgba(10,27,103,1) 0%, rgba(92,37,186,1) 50%, rgba(59,173,217,1) 100%) no-repeat center center fixed;
@@ -12,14 +13,34 @@ body {
 }
 
 h1 {
-    font-size: 15vmin;
+    padding-left: 5vmin;
+    padding-right: 5vmin;
+    font-size: 13vmin;
     margin-bottom: 5vmin;
     text-align: center;
 }
 
 h2 {
+    padding-left: 5vmin;
+    padding-right: 5vmin;
     font-size: 10vmin;
     padding-bottom: 1vmin;
+}
+
+h3 {
+    font-size: 5vmin;
+    padding-bottom: 1vmin;
+    padding-left: 1.5vmin;
+    margin-bottom: 0;
+}
+
+h4 {
+    font-size: 4vmin;
+    padding-bottom: 1vmin;
+    padding-left: 1.5vmin;
+    margin-bottom: 0;
+    text-align: right;
+    color: #4F4F4F;
 }
 
 input{
@@ -66,11 +87,25 @@ button:hover {
     padding-right: 5vmin;
 }
 
-#mainFrame {
+.mainFrame {
     background-color: whitesmoke;
     padding: 3%;
     border-radius: 6vmin;
     padding: 3vmin;
+    margin-top: 3vmin;
+}
+
+.smallbutton {
+    font-family: Roboto;
+    font-size: 3vmin;
+    border: solid #4F4F4F 3px;
+    color: #4F4F4F;
+    border-radius: 6vmin;
+    padding-left: 3vmin;
+    padding-right: 3vmin;
+    text-align: center;
+    margin: 1vmin;
+    transition: all ease 0.5s;
 }
 
 #title {
@@ -83,11 +118,8 @@ button:hover {
 
 #passerr{
     margin-left: auto;
-    float: right;
+    text-align: right;
     max-width: 45%;
-    font-family: Roboto;
-    font-size: 5vmin;
-    color: #4F4F4F;
 }
 
 #flex{
@@ -96,4 +128,8 @@ button:hover {
     padding-top: 2vmin;
     padding-left: 5vmin;
     padding-right: 5vmin;
+}
+
+#emailchange{
+    margin: 1vmin;
 }
